force-app/main/default/objects/IT_Resources__c/IT_Resources__c.object-meta.xml
<CustomObject>
    <description>List of IT resources assigned to the employee</description>
    <label>IT Resources</label>
    <nameField>
        <displayFormat>ITR-{00000}</displayFormat>
        <label>IT Resources Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>