force-app/main/default/objects/IT_Resources__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <inlineHelpText>Cost of the individual IT resource (i.e. it&apos;s purchase price)</inlineHelpText>
    <label>Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>