force-app/main/default/objects/IT_Resources__c/fields/Hardware_Type__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Type__c</fullName>
    <label>Hardware Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Resource_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Docking Station</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>