force-app/main/default/objects/IT_Resources__c/fields/ICCID__c.field-meta.xml
<CustomField>
    <fullName>ICCID__c</fullName>
    <label>ICCID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>