force-app/main/default/objects/IT_Resources__c/fields/IT_Resource_Location__c.field-meta.xml
<CustomField>
    <fullName>IT_Resource_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IT Resource Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IT Resources</relationshipLabel>
    <relationshipName>IT_Resources1</relationshipName>
    <type>Lookup</type>
</CustomField>