force-app/main/default/objects/IT_Resources__c/fields/IT_Resource_Owner__c.field-meta.xml
<CustomField>
    <fullName>IT_Resource_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IT Resource Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>IT Resources</relationshipLabel>
    <relationshipName>IT_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>