force-app/main/default/objects/IT_Resources__c/fields/Mobile_Resource__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Resource__c</fullName>
    <label>Mobile Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Resource_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cell Phone</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>iPhone</fullName>
            </value>
            <value>
                <fullName>Wireless Hub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>