force-app/main/default/objects/IT_Resources__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <length>35</length>
    <type>Text</type>
</CustomField>